--- a/hpo.ipynb
+++ b/hpo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 139,
    "id": "6395b840",
    "metadata": {},
    "outputs": [],
@@ -25,14 +25,14 @@
     "import matplotlib.pyplot as plt\n",
     "from torch.utils import data\n",
     "from fvcore.common.config import CfgNode\n",
-    "from submitit.core.utils import FailedJobError\n",
+    "from submitit.core.utils import FailedJobError, UncompletedJobError\n",
     "from itertools import cycle\n",
     "from time import sleep"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 140,
    "id": "e3e7f060",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 141,
    "id": "d27d2cc2",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 142,
    "id": "8beab615",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 103,
    "id": "ffb56d03",
    "metadata": {},
    "outputs": [],
@@ -165,10 +165,11 @@
     "    hv_best = 0\n",
     "    \n",
     "    for i, job in enumerate(jobs):\n",
-    "        try:\n",
-    "            hv, dist = job.result()\n",
-    "        except FailedJobError:\n",
+    "        if job.state == 'FAILED' or job.state == 'TIMEOUT':\n",
     "            continue\n",
+    "\n",
+    "        hv, dist = job.result()\n",
+    "        \n",
     "        if max_dist is not None and dist > max_dist:\n",
     "            continue\n",
     "        \n",
@@ -178,7 +179,18 @@
     "            idx_best = i\n",
     "    assert idx_best is not None, \"No optimal cfg found\"\n",
     "    print(f'Best job: {jobs[idx_best].job_id}')\n",
-    "    return jobs[idx_best].submission().args[2]"
+    "    cfg = jobs[idx_best].submission().args[2]\n",
+    "    return {\n",
+    "        'lr': cfg.lr,\n",
+    "        'weight_decay': cfg.weight_decay,\n",
+    "        'scheduler': cfg.lr_scheduler,\n",
+    "        'alpha': cfg.alpha,\n",
+    "        'solver': cfg.internal_solver_phn,\n",
+    "        'norm': cfg.normalization_type,\n",
+    "        'mildening': cfg.train_ray_mildening,\n",
+    "        'clipping': cfg.lambda_clipping,\n",
+    "        'dampening': cfg.dampening,\n",
+    "    }"
    ]
   },
   {
@@ -231,18 +243,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 143,
    "id": "f63f412e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "executor.update_parameters(timeout_min=20, slurm_partition=\"alldlc_gpu-rtx2080\", name='hpo', gpus_per_node=1)\n",
+    "executor.update_parameters(timeout_min=120, slurm_partition=\"alldlc_gpu-rtx2080\", name='hpo', gpus_per_node=1)\n",
     "executor.update_parameters(slurm_array_parallelism=100)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0d9dbace",
+   "id": "dd3e22e1",
    "metadata": {},
    "source": [
     "## Analyze"
@@ -250,36 +262,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "05e162f3",
+   "execution_count": 137,
+   "id": "20775361",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = load_jobs('cosmos', 'multi_mnist')"
+    "jobs = load_jobs('uniform', 'multi_fashion')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "7a7ed445",
+   "execution_count": 136,
+   "id": "83602e05",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.32251452588718355 97 6283735_0\n",
-      "0.33988875660888507 97 6283735_13\n",
-      "Best job: 6283735_13\n"
+      "0.35850207382118526 99 6284951_0\n",
+      "0.3724070045773864 97 6284951_13\n",
+      "Best job: 6284951_13\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "CfgNode({'dataset': 'multi_fashion', 'dim': (1, 36, 36), 'objectives': ['CrossEntropyLoss', 'CrossEntropyLoss'], 'task_ids': ['l', 'r'], 'ignore_index': -100, 'epochs': 100, 'num_workers': 4, 'checkpointing': False, 'lr_scheduler': 'CosineAnnealing', 'lr': 0.001, 'weight_decay': 0.01, 'batch_size': 256, 'method': 'cosmos', 'num_models': 5, 'approximate_mgda': False, 'normalization_type': 'none', 'alpha': 0.2, 'internal_solver_phn': 'linear', 'cosmos': CfgNode({}), 'n_train_rays_cosmos': 5, 'loss_mins': [0.0], 'loss_maxs': [1.0], 'lambda_clipping': 10.0, 'lambda_lr': 0.2, 'dampening': 0.01, 'upsample_ratio': 1, 'train_ray_mildening': 0.3, 'seed': 1, 'logdir': 'results', 'n_partitions': 24, 'eval_every': 1, 'train_eval_every': 0, 'reference_point': [1, 1], 'device': 'cuda', 'metrics': None})"
+       "{'lr': 0.001,\n",
+       " 'weight_decay': 0.01,\n",
+       " 'scheduler': 'CosineAnnealing',\n",
+       " 'alpha': 0.2,\n",
+       " 'solver': 'linear',\n",
+       " 'norm': 'none',\n",
+       " 'mildening': 0.5,\n",
+       " 'clipping': 5.0,\n",
+       " 'dampening': 0.2}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,24 +307,6 @@
    "source": [
     "get_optimal_cfg(jobs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02ce6388",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jobs[0].submission().args[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b754db56",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -355,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9692bd70",
+   "id": "a7ce282e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e14d6df",
+   "id": "e1c06581",
    "metadata": {},
    "source": [
     "## mgda"
@@ -381,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e4aec0da",
+   "execution_count": 78,
+   "id": "580624ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,8 +400,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3f40559c",
+   "execution_count": 79,
+   "id": "69c4ff94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,8 +417,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "262e1884",
+   "execution_count": 80,
+   "id": "5ba62b21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d15d31",
+   "id": "4ac82fcd",
    "metadata": {},
    "source": [
     "## phn"
@@ -440,8 +442,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3875ca3a",
+   "execution_count": 75,
+   "id": "d55ada4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,8 +460,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0321e91",
+   "execution_count": 76,
+   "id": "a9ee57e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,8 +478,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f232d65c",
+   "execution_count": 77,
+   "id": "be8f457a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5876449f",
+   "id": "6b12f1a3",
    "metadata": {},
    "source": [
     "## pmtl"
@@ -502,8 +504,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "61dd8073",
+   "execution_count": 144,
+   "id": "9ea34eba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "488ed571",
+   "execution_count": null,
+   "id": "72841371",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30075d7f",
+   "id": "fd7ea2b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc9a8ddc",
+   "id": "5ccc59c0",
    "metadata": {},
    "source": [
     "## Single task"
@@ -562,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c5b46322",
+   "id": "d66a4b6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6466d72c",
+   "id": "1a4bc739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "0ca6d0ce",
+   "id": "6a0e0285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af0d53cd",
+   "id": "257d8a08",
    "metadata": {},
    "source": [
     "## Uniform"
@@ -618,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "a91696dd",
+   "id": "32028a6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "d0ff8bd9",
+   "id": "66011967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "505e2c13",
+   "id": "183aa041",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdf9d7cd",
+   "id": "3c627211",
    "metadata": {},
    "outputs": [],
    "source": []
