hpo mm single task

--- a/hpo.ipynb
+++ b/hpo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "id": "6395b840",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "id": "e3e7f060",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 3,
    "id": "d27d2cc2",
    "metadata": {},
    "outputs": [],
@@ -65,22 +65,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_evaluations = 100"
+    "num_evaluations = 150"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "id": "8beab615",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr           = [0.01, 0.005, 0.001, 0.0005, 0.0001]\n",
-    "weight_decay = [0.1, 0.01, 0.001, 0.0001, 0.]\n",
+    "lr           = [0.01, 0.0075, 0.005, 0.0025, 0.001, 0.00075, 0.0005, 0.00025, 0.0001]\n",
+    "weight_decay = [0.1, 0.25, 0.05, 0.075, 0.01, 0.0075, 0.005, 0.0025, 0.001, 0.00075, 0.0005, 0.00025, 0.0001]\n",
     "scheduler    = ['none', 'MultiStep', 'CosineAnnealing']\n",
     "\n",
     "# phn\n",
-    "alpha  = [1., 0.5, 0.3, 0.2, 0.1]\n",
     "solver = ['linear', 'epo']\n",
     "\n",
     "# mgda\n",
@@ -104,18 +103,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "9850fc58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sampling\n",
     "np.random.seed(1)\n",
     "\n",
     "lr_samples = {'lr': np.random.choice(lr, num_evaluations)}\n",
     "weight_decay_samples = {'weight_decay': np.random.choice(weight_decay, num_evaluations)}\n",
     "scheduler_samples = {'lr_scheduler': np.random.choice(scheduler, num_evaluations)}\n",
-    "alpha_samples = {'alpha': np.random.choice(alpha, num_evaluations)}\n",
     "solver_samples = {'internal_solver_phn': np.random.choice(solver, num_evaluations)}\n",
     "norm_samples = {'normalization_type': np.random.choice(norm, num_evaluations)}\n",
     "mildening_samples = {'train_ray_mildening': np.random.choice(mildening, num_evaluations)}\n",
@@ -125,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "id": "ffb56d03",
    "metadata": {},
    "outputs": [],
@@ -136,7 +133,7 @@
     "\n",
     "\n",
     "def save_jobs(method, dataset, jobs, tag='hpo', force=False):\n",
-    "    if not results_exist(method, dataset) or force:\n",
+    "    if not results_exist(method, dataset, tag) or force:\n",
     "        with open(f'pickles/{method}_{dataset}_{tag}.pickle', 'wb') as f:\n",
     "            pickle.dump(jobs, f)\n",
     "    else:\n",
@@ -184,7 +181,6 @@
     "        'lr': cfg.lr,\n",
     "        'weight_decay': cfg.weight_decay,\n",
     "        'scheduler': cfg.lr_scheduler,\n",
-    "        'alpha': cfg.alpha,\n",
     "        'solver': cfg.internal_solver_phn,\n",
     "        'norm': cfg.normalization_type,\n",
     "        'mildening': cfg.train_ray_mildening,\n",
@@ -195,13 +191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "5b7b107f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def execute(config, hp_samples, force=False):\n",
-    "    if not force and results_exist(config.method, config.dataset):\n",
+    "def execute(config, hp_samples, force=False, tag='hpo'):\n",
+    "    if not force and results_exist(config.method, config.dataset, tag):\n",
     "        print('skipping. Use force=True to enforce execution')\n",
     "        return []\n",
     "    \n",
@@ -217,7 +213,7 @@
     "        cfg.merge_from_list(args)\n",
     "        cfgs.append(cfg)\n",
     "    \n",
-    "    tags = [f\"hpo_{i :2d}\" for i in range(len(cfgs))]\n",
+    "    tags = [f\"{tag}_{i :02d}\" for i in range(len(cfgs))]\n",
     "    \n",
     "    # func, rank, world_size, cfg, tag\n",
     "    return executor.map_array(main, cycle([0]), cycle([1]), cfgs, tags)"
@@ -225,31 +221,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "id": "769da299",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def execute_and_save(config, hp_samples, force=False):\n",
-    "    jobs = execute(config, hp_samples, force)\n",
+    "def execute_and_save(config, hp_samples, force=False, tag='hpo'):\n",
+    "    jobs = execute(config, hp_samples, force, tag)\n",
     "    done = len(jobs) == 0\n",
     "    while not done:\n",
     "        done = percent_finished(jobs) == 1\n",
     "        sleep(10)\n",
     "    \n",
-    "    save_jobs(config.method, config.dataset, jobs, force=force)\n",
+    "    method_name = config.method + \"_\" + config.task_id if config.method == 'single_task' else config.method\n",
+    "    \n",
+    "    save_jobs(method_name, config.dataset, jobs, force=force, tag=tag)\n",
     "    return jobs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 28,
    "id": "f63f412e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "executor.update_parameters(timeout_min=120, slurm_partition=\"alldlc_gpu-rtx2080\", name='hpo', gpus_per_node=1)\n",
-    "executor.update_parameters(slurm_array_parallelism=100)"
+    "executor.update_parameters(timeout_min=20, slurm_partition=\"alldlc_gpu-rtx2080\", name='hpo', gpus_per_node=1)\n",
+    "executor.update_parameters(slurm_array_parallelism=150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0181ebb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "executor.update_parameters(slurm_exclude='dlcgpu12')"
    ]
   },
   {
@@ -262,17 +270,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "id": "20775361",
+   "execution_count": null,
+   "id": "20996fb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = load_jobs('uniform', 'multi_fashion')"
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion_mnist/cosmos.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        mildening_samples,\n",
+    "        clipping_samples,\n",
+    "        dampening_samples,\n",
+    "    ],\n",
+    "    tag='hpo_capacity', force=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
+   "id": "4a4119bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_fashion_mnist/single_task.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "        mildening_samples,\n",
+    "        clipping_samples,\n",
+    "        dampening_samples,\n",
+    "    ],\n",
+    "    tag='hpo_capacity', force=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e05dfa6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "20775361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = load_jobs('single_task', 'multi_fashion_mnist', 'hpo_capacity')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "036b8631",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "83602e05",
    "metadata": {},
    "outputs": [
@@ -280,18 +344,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.35850207382118526 99 6284951_0\n",
-      "0.3724070045773864 97 6284951_13\n",
-      "Best job: 6284951_13\n"
+      "0.5008392256130811 16 6835378_0\n",
+      "0.5790844750420077 98 6835378_6\n",
+      "Best job: 6835378_6\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'lr': 0.001,\n",
-       " 'weight_decay': 0.01,\n",
+       "{'lr': 0.00025,\n",
+       " 'weight_decay': 0.05,\n",
        " 'scheduler': 'CosineAnnealing',\n",
-       " 'alpha': 0.2,\n",
        " 'solver': 'linear',\n",
        " 'norm': 'none',\n",
        " 'mildening': 0.5,\n",
@@ -299,7 +362,7 @@
        " 'dampening': 0.2}"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,13 +626,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "id": "d66a4b6a",
    "metadata": {},
    "outputs": [],
    "source": [
     "jobs = execute_and_save(\n",
-    "    get_config('configs/multi_mnist/single_task.yaml'), \n",
+    "    get_config('configs/multi_mnist/single_task_1.yaml'), \n",
+    "    hp_samples=[\n",
+    "        lr_samples, \n",
+    "        weight_decay_samples, \n",
+    "        scheduler_samples,\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "280a633e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute_and_save(\n",
+    "    get_config('configs/multi_mnist/single_task_2.yaml'), \n",
     "    hp_samples=[\n",
     "        lr_samples, \n",
     "        weight_decay_samples, \n",
