--- a/generate_results.ipynb
+++ b/generate_results.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "af5ec1c4",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
     "        cfg.merge_from_list(['seed', seed])\n",
     "        cfgs.append(cfg)\n",
     "    \n",
-    "    tags = [f\"result_{s :2d}\" for s in seeds]\n",
+    "    tags = [f\"result_{s :02d}\" for s in seeds]\n",
     "    \n",
     "    # func, rank, world_size, cfg, tag\n",
     "    return executor.map_array(main, cycle([0]), cycle([1]), cfgs, tags)"
@@ -112,15 +112,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cosmos\n",
       "uniform\n",
       "phn\n",
       "mgda\n",
-      "cosmos\n",
       "uniform\n",
       "phn\n",
       "mgda\n",
-      "cosmos\n",
       "uniform\n",
       "phn\n",
       "mgda\n",
@@ -162,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "de755f5e",
    "metadata": {},
    "outputs": [],
@@ -180,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "abac03ff",
    "metadata": {},
    "outputs": [],
@@ -190,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "c1a5215e",
    "metadata": {},
    "outputs": [],
@@ -200,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "9ae40260",
    "metadata": {},
    "outputs": [],
@@ -218,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "d8f184f9",
    "metadata": {},
    "outputs": [],
@@ -228,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "cb908bea",
    "metadata": {},
    "outputs": [],
@@ -238,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "ec22f7d7",
    "metadata": {},
    "outputs": [],
@@ -288,32 +285,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "181f983a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = execute(get_config('configs/multi_mnist/single_task.yaml'), seeds)"
+    "jobs = execute(get_config('configs/multi_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('configs/multi_mnist/single_task_2.yaml'), seeds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "8f2aae39",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = execute(get_config('configs/multi_fashion/single_task.yaml'), seeds)"
+    "jobs = execute(get_config('configs/multi_fashion/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('configs/multi_fashion/single_task_2.yaml'), seeds)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "510227e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = execute(get_config('configs/multi_fashion_mnist/single_task.yaml'), seeds)"
+    "jobs = execute(get_config('configs/multi_fashion_mnist/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('configs/multi_fashion_mnist/single_task_2.yaml'), seeds)"
    ]
   },
   {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "89a79255",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "24a7a461",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "f9e6dd0b",
    "metadata": {},
    "outputs": [],
@@ -355,9 +355,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e66264c",
+   "metadata": {},
+   "source": [
+    "# Different sizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c993b00d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "executor.update_parameters(timeout_min=60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9b2a29a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded data for multi_mnist\n",
+      "loaded data for multi_fashion\n",
+      "loaded data for multi_fashion_mnist\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = load_data(dirname='results_size_2', datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1ba502e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No handles with labels found to put in legend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uniform\n",
+      "success. See size_2_multi_mnist_multi_fashion_multi_fashion_mnist.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "plot_row(results, datasets=['multi_mnist', 'multi_fashion', 'multi_fashion_mnist'], prefix='size_2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca0dc81f",
+   "metadata": {},
+   "source": [
+    "#### uniform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b146730e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_configs/multi_fashion/uniform.yaml'), seeds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c242c8",
+   "metadata": {},
+   "source": [
+    "#### single task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fea11cee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jobs = execute(get_config('size_configs/multi_fashion/single_task_1.yaml'), seeds)\n",
+    "jobs = execute(get_config('size_configs/multi_fashion/single_task_2.yaml'), seeds)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d693ff90",
+   "id": "a9687c52",
    "metadata": {},
    "outputs": [],
    "source": []
